# notion_sync

./: main.py  pyproject.toml
.github/workflows/: notion_sync.yml
github/: issue.py  manager.py  pull_request.py  review.py
notion/: block.py  manager.py  objects.py  property.py  ticket.py
