[tool.poetry]
name = "notion_sync"
version = "0.1.0"
description = "Syncing Notion boards with Github issues and pull requests."
authors = ["ArnaudCadas <cadas.arnaud@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
